<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.antonymail.agenda.MainActivity" >
    <!---
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/action_settings"/>
    -->


    <item

        android:id="@+id/menu_crear"
        android:title="@string/menu_crear"
        android:icon="@drawable/contacto_2"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText"/>


    <item
        android:id="@+id/menu_traer_contactos"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_traer_contactos"
        android:icon="@drawable/importado"/>


    <item
        android:id="@+id/menu_borrar_todos"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_borrar_todos"
        android:icon="@drawable/amigos"/>
</menu>
