<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ModificarUsuarios" >
    <!---
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/action_settings"/>

        -->
    <item

        android:id="@+id/menu_llamar"
        android:title="@string/menu_llamar"
        android:icon="@android:drawable/sym_action_call"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText"/>

    <item

        android:id="@+id/menu_email"
        android:title="@string/menu_email"
        android:icon="@android:drawable/sym_action_email"
        android:orderInCategory="2"
        android:showAsAction="ifRoom|withText"/>

    <item

        android:id="@+id/menu_compartir"
        android:title="@string/menu_compartir"
        android:icon="@drawable/wsh_2"
        android:orderInCategory="3"
        android:showAsAction="ifRoom|withText"/>

    <!--- android.R.drawable.companeros-->

</menu>
